--- a/src/gadgets/noteTA/MediaWiki:Gadget-noteTA.css
+++ b/src/gadgets/noteTA/MediaWiki:Gadget-noteTA.css
@@ -7,7 +7,7 @@
  * User:AnnAngela做了整合
  */
 #noteTA-lang {
-    background: #3366CC;
+    background: #36C;
     color: white;
     text-align: center;
     padding: .5rem;
