chore(gadget-prism): ignore Stylelint

--- a/src/gadgets/prism/MediaWiki:Gadget-prism.css
+++ b/src/gadgets/prism/MediaWiki:Gadget-prism.css
@@ -1,3 +1,4 @@
+/* stylelint-disable color-function-notation, media-feature-range-notation -- external CSS file */
 /**
  * @source https://github.com/PrismJS/prism/blob/master/themes/prism-coy.css
  * 更新后请同步更新上面链接到最新版本
