fix(gadget-prism): `white-space: pre-warp` for wiki

--- a/src/gadgets/prism/MediaWiki:Gadget-prism.css
+++ b/src/gadgets/prism/MediaWiki:Gadget-prism.css
@@ -303,3 +303,8 @@ span.inline-color {
 	height: 120%;
 	width: 120%;
 }
+
+pre.language-wiki, code.language-wiki {
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+}
