fix: noteTA button background color

--- a/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
@@ -228,4 +228,5 @@ aside#moe-global-siderail #moe-custom-sidenav-block h2 {
     cursor: pointer;
     font-size: 12px;
     border-radius: 100vw;
+    background-color:#0000;
 }
