fix(gadget-prism-wiki): 更改异步加载的位置

--- a/src/gadgets/prism/MediaWiki:Gadget-prism.css
+++ b/src/gadgets/prism/MediaWiki:Gadget-prism.css
@@ -9,3 +9,7 @@ pre.prism-prettyprint-container {
 .line-numbers-rows > span:hover {
     background-color: rgb(128 128 128 / 20%);
 }
+
+pre[class*="language-"] {
+    display: flow-root;
+}
