--- a/src/gadgets/prism/MediaWiki:Gadget-prism.css
+++ b/src/gadgets/prism/MediaWiki:Gadget-prism.css
@@ -1,5 +1,5 @@
-pre.prism-prettyprint-container {
-    white-space: pre-wrap !important;
+#mw-content-text code.prism-prettyprint.language-wiki {
+    white-space: pre-wrap;
 }
 
 .line-numbers span.line-numbers-rows {
