chore: update palette

--- a/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
+++ b/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
@@ -402,8 +402,8 @@ s.just-kidding-text {
 }
 
 [color-mode="dark"] .infoBoxContent {
-    border-color: #505050;
-    background: #232323;
+    border-color: #3e4452;
+    background: #23272e;
 }
 
 /* wikitable green */
