--- a/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
+++ b/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
@@ -1409,20 +1409,20 @@ body.overlay-scrollbars #bodyContent {
 }
 
 /* TODO: 暗色模式 暂时直接反转颜色 */
-[color-mode="dark"] :is(.infobox, .moe-infobox, .navbox) {
+[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch, #topicpath) {
     /* FIXME: 100% 反色太黑了，所以使用90%，但是这会造成图片的颜色轻微失真 */
     filter: invert(0.9) hue-rotate(198deg);
     color: #222;
 }
 
-[color-mode="dark"] :is(.infobox, .moe-infobox, .navbox) a {
+[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch) a {
     --color: #155d33;
 }
 
-[color-mode="dark"] :is(.infobox, .moe-infobox, .navbox) figure,
-[color-mode="dark"] :is(.infobox, .moe-infobox, .navbox) img,
-[color-mode="dark"] :is(.infobox, .moe-infobox, .navbox) iframe,
-[color-mode="dark"] :is(.infobox, .moe-infobox, .navbox) div[style*="image"] {
+[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch) figure,
+[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch) img,
+[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch) iframe,
+[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch) div[style*="image"] {
     filter: invert(1) hue-rotate(180deg);
     opacity: 1;
 }
