--- a/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
+++ b/src/gadgets/site-styles/MediaWiki:Gadget-site-styles.css
@@ -304,7 +304,14 @@ span[lang="ja" i] :is(i, [style*="italic" i]) {
 /* 黑幕模板配合CSS */
 .heimu,
 .heimu rt {
-    background-color: #252525;
+    --heimu-color: #252525;
+    --heimu-text-color: #ffffff;
+    --heimu-link-color: #add8e6;
+    --heimu-visited-link-color: #c5cae9;
+    --heimu-new-link-color: #fcc;
+    --heimu-new-visited-link-color: #ef9a9a;
+    --heimu-extiw-visited-link-color: #d1c4e9;
+    background-color: var(--heimu-color);
 }
 
 .heimu,
@@ -319,39 +326,45 @@ span.heimu a.extiw:visited,
 span.heimu a.mw-disambig,
 span.heimu a.mw-redirect {
     transition: color 0.13s linear;
-    color: #252525;
+    color: var(--heimu-color);
     /* NO TRANSPARENT!!! */
     text-shadow: none;
 }
 
 span.heimu:hover,
 span.heimu:active {
-    color: white;
+    color: var(--heimu-text-color);
 }
 
 span.heimu:hover a,
 a:hover span.heimu {
-    color: lightblue;
+    color: var(--heimu-link-color);
 }
 
 span.heimu:hover a:visited,
 a:visited:hover span.heimu {
-    color: #c5cae9;
+    color: var(--heimu-visited-link-color);
 }
 
 span.heimu:hover a.new,
 a.new:hover span.heimu {
-    color: #fcc;
+    color: var(--heimu-new-link-color);
 }
 
 span.heimu a.new:hover:visited,
 a.new:hover:visited span.heimu {
-    color: #ef9a9a;
+    color: var(--heimu-new-visited-link-color);
 }
 
 span.heimu:hover a.extiw:visited,
 a.extiw:visited:hover span.heimu {
-    color: #d1c4e9;
+    color: var(--heimu-extiw-visited-link-color);
+}
+
+/* 黑幕 暗色模式 */
+[color-mode="dark"] .heimu,
+[color-mode="dark"] .heimu rt {
+    --heimu-color: #5e6272;
 }
 
 /* 胡话模板配合CSS */
@@ -956,7 +969,7 @@ table.navbox th {
 }
 
 .navbox-odd {
-    background: none repeat scroll 0 0 transparent;
+    background: none repeat scroll 0 0 #fdfdfd;
 }
 
 /* 表格宽度 */
@@ -1409,24 +1422,48 @@ body.overlay-scrollbars #bodyContent {
 }
 
 /* TODO: 暗色模式 暂时直接反转颜色 */
-[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch, #topicpath) {
+[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch, #topicpath):not(.dark-theme-invert-disabled) {
     /* FIXME: 100% 反色太黑了，所以使用90%，但是这会造成图片的颜色轻微失真 */
     filter: invert(0.9) hue-rotate(198deg);
     color: #222;
 }
 
-[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch) a {
+.dark-theme-invert .dark-theme-invert {
+    filter: unset;
+}
+
+[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) a:not(.new) {
     --color: #155d33;
 }
 
-[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch) figure,
-[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch) img,
-[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch) iframe,
-[color-mode="dark"] :is(.infobox, .moe-infobox, .infoboxSpecial, .navbox, .ztdh, #powersearch) div[style*="image"] {
+[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) figure,
+[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) img,
+[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) iframe,
+[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) canvas,
+[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) div[style*="image"] {
     filter: invert(1) hue-rotate(180deg);
     opacity: 1;
 }
 
 [color-mode="dark"] input[type="text"] {
     color: var(--theme-text-color);
+}
+
+[color-mode="dark"] :is(.navbox):not(.dark-theme-invert-disabled) {
+    color: rgb(44, 62, 80);
+    --theme-link-color: rgb(51, 102, 187);
+    position: relative;
+}
+
+[color-mode="dark"] :is(.navbox):not(.dark-theme-invert-disabled)::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.25);
+    user-select: none;
+    pointer-events: none;
 }
