--- a/src/gadgets/HeimuToggle/MediaWiki:Gadget-heimu-toggle.css
+++ b/src/gadgets/HeimuToggle/MediaWiki:Gadget-heimu-toggle.css
@@ -7,7 +7,7 @@
 
 body.heimu_toggle_on .heimu,
 body.heimu_toggle_on .heimu rt {
-    color: #000;
+    color: rgba(var(--theme-text-color--rgb, 0, 0, 0), 0.8);
     background-color: rgb(37 37 37 / 13%);
 }
 
