fix(gadget-prism-core): styles for Moeskin

--- a/src/gadgets/prism-core/MediaWiki:Gadget-prism-coy.css
+++ b/src/gadgets/prism-core/MediaWiki:Gadget-prism-coy.css
@@ -29,16 +29,18 @@
 }
 
 /* Code blocks */
-#mw-content-text pre[class*="language-"] {
+div#mw-content-text pre[class*="language-"] {
     position: relative;
     margin: .5em 0;
     overflow: visible;
     padding: 1px;
+    border: none;
 }
 
 #mw-content-text pre[class*="language-"]>code {
     position: relative;
     z-index: 1;
+    border: none;
     border-left: 10px solid #358ccb;
     box-shadow: -1px 0px 0px 0px #358ccb, 0px 0px 0px 1px #dfdfdf;
     background-color: #fdfdfd;
