--- a/src/groups/zh/sysop/MediaWiki:Group-sysop.css
+++ b/src/groups/zh/sysop/MediaWiki:Group-sysop.css
@@ -84,6 +84,6 @@ body[class*="page-萌娘百科_talk_讨论版_"] .userlink .userlink-menu {
     display: none;
 }
 
-li.mw-moderation-line:not(.mw-moderation-approved) input[type='radio'] {
+li.mw-moderation-line:not(.mw-moderation-approved) input[type="radio"] {
     visibility: unset;
 }
