fix: Update Gadget-dark-mode.css

--- a/src/gadgets/dark-mode/Gadget-dark-mode.css
+++ b/src/gadgets/dark-mode/Gadget-dark-mode.css
@@ -208,6 +208,7 @@ html {
     }
 }
 
+/* stylelint-disable-next-line at-rule-prelude-no-invalid -- for firefox */
 @-moz-document url-prefix() {
     body {
         background: #000;
