--- a/src/gadgets/HeimuToggle/Gadget-heimu-toggle.css
+++ b/src/gadgets/HeimuToggle/Gadget-heimu-toggle.css
@@ -8,7 +8,7 @@
 body.heimu_toggle_on .heimu,
 body.heimu_toggle_on .heimu rt {
     /* stylelint-disable-next-line custom-property-pattern -- Variable from MoeSkin */
-    color: rgba(var(--theme-text-color--rgb, 0, 0, 0), 0.8);
+    color: rgb(var(--theme-text-color--rgb, 0 0 0) / 80%);
     background-color: rgb(37 37 37 / 13%);
 }
 
