--- a/src/gadgets/GothicMoe/Gadget-GothicMoe.css
+++ b/src/gadgets/GothicMoe/Gadget-GothicMoe.css
@@ -7,13 +7,13 @@
 }
 
 .mw-body-content :is(h1, h2) {
-    font-family: "Linux Libertine", Georgia, Times, serif, NospzGothicMoe, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, NospzGothicMoe;
 }
 
-body.skin-vector,
 h1#firstHeading,
+body.skin-vector,
 body.skin-moeskin {
-    font-family: sans-serif, NospzGothicMoe, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, NospzGothicMoe;
 }
 
 html :is(i, [style*="italic"i]) span[lang="ja"i],
