--- a/src/gadgets/HeimuToggle/Gadget-heimu-toggle.css
+++ b/src/gadgets/HeimuToggle/Gadget-heimu-toggle.css
@@ -7,8 +7,7 @@
 
 body.heimu_toggle_on .heimu,
 body.heimu_toggle_on .heimu rt {
-    /* stylelint-disable-next-line custom-property-pattern -- Variable from MoeSkin */
-    color: rgba(var(--theme-text-color--rgb, 0, 0, 0), 0.8);
+    color: rgb(44 62 80 / 80%);
     background-color: rgb(37 37 37 / 13%);
 }
 
