--- a/src/gadgets/UserLinkAvatar/Gadget-UserLinkAvatar.css
+++ b/src/gadgets/UserLinkAvatar/Gadget-UserLinkAvatar.css
@@ -2,6 +2,7 @@ img.userlink-avatar-small {
     margin-left: 0.2em;
     margin-right: 0.2em;
     width: 1.5em;
+    height: 1.5em;
     border-radius: 15%;
     margin-top: -0.2em;
 }
