--- a/src/gadgets/ShowAvatar/Gadget-ShowAvatar.css
+++ b/src/gadgets/ShowAvatar/Gadget-ShowAvatar.css
@@ -18,7 +18,7 @@
     border-radius: 50%;
 }
 
-.skin-vector #user-rootpage-avatar {
+.skin-vector-2022 #user-rootpage-avatar {
     border-radius: 10px;
     padding: 4px;
 }
