--- a/src/gadgets/site-styles/Gadget-site-styles.css
+++ b/src/gadgets/site-styles/Gadget-site-styles.css
@@ -499,7 +499,7 @@ body,
 }
 
 /* 主标题字型调整 */
-.skin-vector #firstHeading {
+.skin-vector-2022 #firstHeading {
     font-weight: 500;
     padding-left: 0.25em;
 }
