--- a/src/gadgets/GothicMoe/Gadget-GothicMoe.css
+++ b/src/gadgets/GothicMoe/Gadget-GothicMoe.css
@@ -11,7 +11,7 @@
 }
 
 h1#firstHeading,
-body.skin-vector,
+body.skin-vector-2022,
 body.skin-moeskin {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, NospzGothicMoe;
 }
