--- a/src/gadgets/SideBarPic/Gadget-SideBarPic.css
+++ b/src/gadgets/SideBarPic/Gadget-SideBarPic.css
@@ -24,7 +24,7 @@ body.sideBarPic-executed #wglogo {
     }
 }
 
-body.sideBarPic.skin-vector:not(.DeceasedPerson) #mw-panel .portal {
+body.sideBarPic.skin-vector-2022:not(.DeceasedPerson) #mw-panel .portal {
     background-color: rgb(246 246 246 / 90%);
     margin-left: -0.75em;
     margin-right: 0;
@@ -32,7 +32,7 @@ body.sideBarPic.skin-vector:not(.DeceasedPerson) #mw-panel .portal {
     padding-right: 0.95em;
 }
 
-body.sideBarPic.skin-vector:not(.DeceasedPerson) #mw-panel #p-logo + .portal {
+body.sideBarPic.skin-vector-2022:not(.DeceasedPerson) #mw-panel #p-logo + .portal {
     padding-top: 1.1em;
     margin-top: 0;
 }
